<resources>
    <string name="app_name">Bon Appetit</string>
    <string name="scan_qr">Escanear Código QR</string>
    <string name="scan_text"> Para el uso de esta aplicación es necesario
        acceder a la cámara para escanear el código QR en su mesa favor de aceptar los permisos.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="Loret">Loret</string>
    <string name="search">Buscar</string>
    <string name="txt_fogotPass">¿Olvidaste tu contraseña?</string>
    <string name="noAccount">¿No tienes una cuenta?</string>
    <string name="empty_field">Te falta llenar un campo</string>
    <string name="network_error">Un error ha ocurrido</string>

    <string name="understood">Entendido</string>
    <string name="prefs_file">org.bedu.bonappetit.PREFERENCE_FILE_KEY</string>


   <string name="default_web_client">1038898740472-62hgutj7qvgkivntkvv8eijoj338afm0.apps.googleusercontent.com</string>





    <!-- textos para la push simple -->
    <string name="simple_title">Bon Appetit</string>
    <string name="simple_body">¡Bienvenido a nuestra comunidad Bon Appetit!</string>
    <string name="simple_body_2">¡Forma parte de Bon Appetit y registrate pronto!</string>

    <!-- textos para la push con acción -->
    <string name="action_title">Bon Appetit</string>
    <string name="action_body">¡Tenemos estas ofertas para ti!</string>

    <!-- textos para la push con botón -->
    <string name="button_title">Bon Appetit</string>
    <string name="button_body">Da click en el botón de abajo para ejecutar una acción</string>
    <string name="button_text">Aceptar</string>


    <string name="large_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>

    <string name="large_text_description">Preparado en una base de finas hierbas, con toques de salsa inglesa, a fuego medio en horno de barro</string>
    <!-- CANAL CURSOS -->
    <string name="channel_courses">Bon Appetit</string>
    <string name="courses_description">Notificaciones acerca de Bon Appetit</string>


    <string name="Act4PayTextMyOrder">Mi Orden</string>
    <string name="Act4PayTextToPay">Total a pagar</string>
    <string name="Act4PayTextCost">$ 500.00 </string>
    <string name="Act4PayTextButton">Proceder con el pago</string>

    <string name="text_card">Número de tarjeta</string>
    <string name="text_dateCard">Expriación</string>
    <string name="text_cvv">CVV</string>
    <string name="text_nameCard">Nombre titular</string>
    <string name="text_btnCancel">Cancelar</string>
    <string name="text_btnGuardar">Guardar</string>

    <string name="name_user">Nombre</string>
    <string name="userName_user">Nombre de Usuario</string>
    <string name="email_user">Email</string>
    <string name="password_user">Contraseña</string>
    <string name="phone_user">Telefono</string>


    <!--  CONEKTA  -->
    <string name="XXXX">XXXX-XXXX-XXXX-XXXX</string>
    <string name="cardNumber">Numero de la tarjeta:</string>
    <string name="cardName">Nombre que aparece en la tarjeta:</string>
    <string name="expire">Fecha de vencimiento:</string>
    <string name="cardCvc">Codigo de seguridad:</string>
    <string name="mm">MM</string>
    <string name="yyyy">AAAA</string>
    <string name="name">Nombre</string>
    <string name="cvc">CVC</string>
    <string name="outputData"></string>
    <string name="outputTokenData">Token:</string>
    <string name="outputUUIDData">UUID:</string>
    <string name="needInternetConnection">Necesitas conexión a Internet</string>
    <string name="cardDataIncomplete">Datos de la tarjeta incompletos!</string>
    <string name="theTokenIdLabel">Token:</string>
    <string name="errorLabel">Error:</string>
    <string name="uuidDeviceLabel">UUID:</string>

    <string name="facebook_app_id">652073335787077</string> <string name="fb_login_protocol_scheme">fb652073335787077</string>


</resources>