<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_form"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainConstraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/scrollView_form_activity"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

                <ImageView
                    android:id="@+id/banner"
                    android:layout_width="414dp"
                    android:layout_height="137dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:background="@color/colorPrimaryVariant"/>


                <ImageView
                    android:id="@+id/pizzaIcon"
                    android:layout_width="159dp"
                    android:layout_height="123dp"
                    android:layout_marginTop="76dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:src="@drawable/iconopizza" />

                <TextView
                    android:id="@+id/txvTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Realizar Pago"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.050" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintCard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/card_bg"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    app:layout_constraintCircleRadius="30dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/pizzaIcon">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@+id/numberText"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/cardNumber"
                        android:textColor="@color/white"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/numberText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="16dp"
                        android:autofillHints="@string/XXXX"
                        android:hint="@string/XXXX"
                        android:inputType="number"
                        android:maxEms="1"
                        android:maxLength="20"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="@+id/textView"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/textView"
                        app:layout_constraintTop_toTopOf="@+id/textView" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/cvcText"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="24dp"
                        android:layout_toStartOf="@+id/monthText"
                        android:text="@string/cardName"
                        android:textColor="@color/white"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView" />

                    <EditText
                        android:id="@+id/nameText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@+id/textView4"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="10dp"
                        android:autofillHints="@string/name"
                        android:hint="@string/name"
                        android:inputType="text"
                        android:maxLength="60"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView4" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignEnd="@+id/textView"
                        android:layout_alignBottom="@+id/monthText"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="20dp"
                        android:text="@string/expire"
                        android:textColor="@color/white"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/nameText" />

                    <EditText
                        android:id="@+id/monthText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/numberText"
                        android:layout_alignStart="@+id/numberText"
                        android:layout_marginStart="8dp"
                        android:autofillHints="@string/mm"
                        android:hint="@string/mm"
                        android:inputType="number"
                        android:maxLength="2"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="@+id/textView2"
                        app:layout_constraintStart_toEndOf="@+id/textView2"
                        app:layout_constraintTop_toTopOf="@+id/textView2" />

                    <EditText
                        android:id="@+id/yearText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@+id/monthText"
                        android:layout_marginStart="4dp"
                        android:layout_toEndOf="@+id/monthText"
                        android:autofillHints="@string/yyyy"
                        android:hint="@string/yyyy"
                        android:inputType="number"
                        android:maxLength="4"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="@+id/monthText"
                        app:layout_constraintStart_toEndOf="@+id/monthText"
                        app:layout_constraintTop_toTopOf="@+id/monthText"
                        app:layout_constraintVertical_bias="0.0" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/monthText"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="4dp"
                        android:text="@string/cardCvc"
                        android:textColor="@color/white"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/monthText" />

                    <EditText
                        android:id="@+id/cvcText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@+id/textView3"
                        android:layout_marginStart="8dp"
                        android:layout_toEndOf="@+id/textView3"
                        android:autofillHints="@string/cvc"
                        android:hint="@string/cvc"
                        android:inputType="number"
                        android:maxLength="3"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="@+id/textView3"
                        app:layout_constraintStart_toEndOf="@+id/textView3"
                        app:layout_constraintTop_toTopOf="@+id/textView3" />
                </androidx.constraintlayout.widget.ConstraintLayout>



                <Button
                    android:id="@+id/btnTokenize"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:text="Procesar Pago"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/constraintCard"
                    app:layout_constraintVertical_bias="0.06" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

        <View
            android:id="@+id/shadowView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.6"
            android:background="#111111"
            android:clickable="true"
            android:focusable="true"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="gone" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@+id/mainConstraint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/mainConstraint"
            tools:visibility="gone" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>